--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Labb2</title>
 </head>
 <body>
-    Cool hemsida..
+    Cool hemsida.. Will it work?
     <div id="comment-box"></div>
     <script src="scripts.js"></script>
 </body>
