--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Labb2</title>
 </head>
 <body>
+<style>
+    .comment-box {
+        border: 2px solid blue;
+        padding: 10px;
+        margin: 2px;
+    }
+</style>
+
     Cool hemsida.. Will it work?
     <div id="comment-box"></div>
     <script src="scripts.js"></script>
