--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 <style>
-    .comment-box {
+    div {
         border: 2px solid blue;
         padding: 10px;
         margin: 2px;
+        display: inline-block;
     }
 </style>
 
