--- a/index.html
+++ b/index.html
@@ -9,14 +9,30 @@
 <body>
 <style>
     div {
-        border: 2px solid blue;
         padding: 10px;
         margin: 2px;
+        
+        border: 2px solid blue;
         display: inline-block;
     }
+
+    p {
+        border: 2px solid green;
+        padding: 10px;
+    }
+
+    button {
+        float: right;
+    }
+
+    .comment-box {  
+        display: block; 
+        min-width: 400px;       
+    }
+
+
 </style>
 
-    Cool hemsida.. Will it work?
     <div id="comment-box"></div>
     <script src="scripts.js"></script>
 </body>
