added sign and sort button

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
 
 </style>
 <body>
-   
-    <div id="comment-box"></div>
 
+    <div id="comment-box">
+        <button id="commentButton">Comment</button>
+        <button id="sortButton">Sort</button>
+    </div>
 </body>
 
 <script src="scripts.js"></script>
