--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     * {
         font-weight: bolder;
     }
-
     div {
         padding: 20px;
         margin: 2px;
-        
+        border-radius: 10px;
         border: 2px solid blue;
         display: inline-block;
     }
@@ -22,20 +21,20 @@
     p {
         border: 2px solid green;
         padding: 10px;
-    }
-
-    
+    }    
 
     .comment-box {  
         display: block; 
         min-width: 400px;       
     }
-
  
     textarea {
         display: block;
     }
 
+    .hide-comment {
+        display: block;
+    }
 
 </style>
 <body>
